Update landing page content and styling: - Improve mission and vision section - Enhance feature descriptions - Update page title and hero text - Refine team card styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VectorTrace - AI-Powered Code Security</title>
+    <title>Secure Your Open-Source Software with AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
             </a>
             <div class="hidden md:flex space-x-8 items-center">
                 <a href="#features" class="text-slate-300 hover:text-blue-400 transition">Features</a>
-                <a href="#mission" class="text-slate-300 hover:text-blue-400 transition">Our Mission</a>
+                <a href="#mission" class="text-slate-300 hover:text-blue-400 transition">Mission & Vision</a>
                 <a href="#team" class="text-slate-300 hover:text-blue-400 transition">Team</a>
                 <a href="#scanner" class="text-slate-300 hover:text-blue-400 transition">Live Demo</a>
                 <a href="#contact" class="text-slate-300 hover:text-blue-400 transition">Contact</a>
@@ -34,10 +34,10 @@
         <canvas id="hero-canvas"></canvas>
         <div class="hero-content max-w-4xl mx-auto px-4">
             <h1 class="text-5xl md:text-7xl font-black text-white leading-tight mb-4">
-                Your AI Partner in <span class="section-title">Code Security</span>
+                Secure Your <span class="section-title">Open-Source Software</span> with AI
             </h1>
             <p class="text-lg md:text-xl text-slate-300 mb-8 max-w-2xl mx-auto">
-                From threat modeling new features to automatically patching existing vulnerabilities, VectorTrace is your all-in-one AI security partner.
+                VectorTrace is an LLM-based tool for detecting vulnerabilities in source code and generating mitigating measures automatically.
             </p>
             <a href="#scanner" class="btn-primary text-white font-bold px-8 py-4 rounded-lg text-lg">
                 Try The Live Demo
@@ -49,56 +49,64 @@
         <!-- Features Section -->
         <section id="features" class="py-16">
             <div class="text-center mb-12">
-                <h2 class="text-4xl font-bold text-white">Why <span class="section-title">VectorTrace</span>?</h2>
-                <p class="text-slate-400 mt-2">The next generation of developer-first security.</p>
+                <h2 class="text-4xl font-bold text-white">A New Paradigm in <span class="section-title">DevSecOps</span></h2>
+                <p class="text-slate-400 mt-2">VectorTrace integrates seamlessly into the development lifecycle.</p>
             </div>
             <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
-                <!-- Feature Cards remain the same -->
+                 <!-- Feature 1 -->
                  <div class="feature-card glass-card p-6 rounded-lg border-2 border-transparent transition-all duration-300">
                     <div class="text-blue-500 mb-4">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" /></svg>
                     </div>
-                    <h3 class="text-xl font-bold text-white mb-2">AI-Powered Detection</h3>
-                    <p class="text-slate-400">Our fine-tuned LLM understands code context to find complex vulnerabilities that traditional scanners miss.</p>
+                    <h3 class="text-xl font-bold text-white mb-2">Context-Aware Scanning</h3>
+                    <p class="text-slate-400">Our LLM analyzes code with a deep understanding of its logic and structure, identifying complex and zero-day vulnerabilities that pattern-based scanners miss.</p>
                 </div>
+                <!-- Feature 2 -->
                 <div class="feature-card glass-card p-6 rounded-lg border-2 border-transparent transition-all duration-300">
                     <div class="text-purple-500 mb-4">
                          <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" /></svg>
                     </div>
-                    <h3 class="text-xl font-bold text-white mb-2">✨ Automated Patching</h3>
-                    <p class="text-slate-400">Don't just find problems, fix them. VectorTrace generates secure, drop-in code patches with explanations.</p>
+                    <h3 class="text-xl font-bold text-white mb-2">Automated Mitigation</h3>
+                    <p class="text-slate-400">VectorTrace doesn't just find flaws—it generates precise, production-ready code patches and explains the reasoning, accelerating remediation cycles.</p>
                 </div>
+                <!-- Feature 3 -->
                 <div class="feature-card glass-card p-6 rounded-lg border-2 border-transparent transition-all duration-300">
                     <div class="text-blue-500 mb-4">
                          <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 4a2 2 0 114 0v1a1 1 0 001 1h3a1 1 0 011 1v3a1 1 0 01-1 1h-1a2 2 0 100 4h1a1 1 0 011 1v3a1 1 0 01-1 1h-3a1 1 0 01-1-1v-1a2 2 0 10-4 0v1a1 1 0 01-1 1H7a1 1 0 01-1-1v-3a1 1 0 00-1-1H4a2 2 0 110-4h1a1 1 0 001-1V7a1 1 0 011-1h3a1 1 0 001-1V4z" /></svg>
                     </div>
-                    <h3 class="text-xl font-bold text-white mb-2">✨ AI Threat Modeling</h3>
-                    <p class="text-slate-400">Proactively identify security risks in new features before you even start coding, just by describing your idea.</p>
+                    <h3 class="text-xl font-bold text-white mb-2">Proactive Threat Modeling</h3>
+                    <p class="text-slate-400">Describe a new feature in plain English, and our AI will generate a detailed threat model, helping you build security in from the start (Shift-Left Security).</p>
                 </div>
+                <!-- Feature 4 -->
                 <div class="feature-card glass-card p-6 rounded-lg border-2 border-transparent transition-all duration-300">
                     <div class="text-blue-500 mb-4">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 7v10c0 2.21 3.582 4 8 4s8-1.79 8-4V7M4 7c0-2.21 3.582-4 8-4s8 1.79 8 4M4 7l8 5 8-5" /></svg>
                     </div>
-                    <h3 class="text-xl font-bold text-white mb-2">Dependency Scanning</h3>
-                    <p class="text-slate-400">Analyze your entire software supply chain. We identify known CVEs in your open-source dependencies.</p>
+                    <h3 class="text-xl font-bold text-white mb-2">Supply Chain Analysis</h3>
+                    <p class="text-slate-400">We analyze your entire dependency tree, identifying known CVEs and providing actionable intelligence on your open-source software supply chain.</p>
                 </div>
             </div>
         </section>
 
-        <!-- NEW: Our Mission Section -->
+        <!-- Mission & Vision Section -->
         <section id="mission" class="py-16">
-            <div class="text-center mb-12">
-                <h2 class="text-4xl font-bold text-white">Our <span class="section-title">Mission</span></h2>
-                <p class="text-slate-400 mt-2">To secure the world's open-source software ecosystem.</p>
-            </div>
-            <div class="max-w-4xl mx-auto glass-card p-8 rounded-lg text-center">
-                <p class="text-lg text-slate-300 leading-relaxed">
-                    VectorTrace is pioneering the use of Large Language Models (LLMs) to build a smarter, more intuitive tool for vulnerability detection. Our mission is to analyze the source code of software, especially open-source projects, to identify malicious code, list dependencies, and flag known CVEs and CWEs. We don't just find problems—we suggest automated mitigation measures to create a more secure development lifecycle for everyone.
-                </p>
+            <div class="grid md:grid-cols-2 gap-12 items-center">
+                <div class="text-center md:text-left">
+                    <h2 class="text-4xl font-bold text-white">Our <span class="section-title">Mission</span></h2>
+                    <p class="text-lg text-slate-300 leading-relaxed mt-4">
+                        To develop a state-of-the-art, LLM-based tool for the detection of vulnerabilities and malicious code within software, focusing on the open-source ecosystem. We are committed to not only identifying security flaws but also to generating automated, actionable mitigating measures to empower developers and secure the digital infrastructure we all depend on.
+                    </p>
+                </div>
+                <div class="text-center md:text-left">
+                    <h2 class="text-4xl font-bold text-white">Our <span class="section-title">Vision</span></h2>
+                    <p class="text-lg text-slate-300 leading-relaxed mt-4">
+                        To create a future where secure coding is an intuitive and integrated part of the development process. We envision a world where AI-driven security tools work as collaborative partners with developers, making the open-source world safer, more resilient, and more innovative for everyone.
+                    </p>
+                </div>
             </div>
         </section>
 
-        <!-- NEW: Team Section -->
+        <!-- Team Section -->
         <section id="team" class="py-16">
             <div class="text-center mb-12">
                 <h2 class="text-4xl font-bold text-white">Meet the <span class="section-title">Team</span></h2>
