--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <!-- Header -->
     <header class="fixed top-0 left-0 right-0 z-50 glass-card">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#home" class="text-2xl font-bold text-white">
-                <span class="text-blue-500">Vector</span>Trace
+            <a href="#home" class="flex items-center gap-2 text-2xl font-bold text-white">
+                <img src="assets/logo.png" alt="VectorTrace Logo" class="h-8 w-auto">
+                <span><span class="text-blue-500">Vector</span>Trace</span>
             </a>
             <div class="hidden md:flex space-x-8 items-center">
                 <a href="#features" class="text-slate-300 hover:text-blue-400 transition">Features</a>
