--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secure Your Open-Source Software with AI</title>
+    <link rel="icon" type="image/png" href="assets/logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
@@ -16,7 +17,7 @@
     <header class="fixed top-0 left-0 right-0 z-50 glass-card">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#home" class="flex items-center gap-2 text-2xl font-bold text-white">
-                <img src="assets/logo.png" alt="VectorTrace Logo" class="h-8 w-auto">
+                <img src="assets/logo.png" alt="VectorTrace Logo" class="h-12 w-auto">
                 <span><span class="text-blue-500">Vector</span>Trace</span>
             </a>
             <div class="hidden md:flex space-x-8 items-center">
